force-app/main/default/objects/Match_Result__c/Match_Result__c.object-meta.xml
<CustomObject>
    <label>Match Result</label>
    <nameField>
        <displayFormat>MRI-{00000}</displayFormat>
        <label>Match Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>