force-app/main/default/objects/Match_Result__c/fields/Caseworker_Notes__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Notes__c</fullName>
    <label>Caseworker_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>