force-app/main/default/objects/Match_Result__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Match Results</relationshipLabel>
    <relationshipName>Match_Results</relationshipName>
    <type>Lookup</type>
</CustomField>