force-app/main/default/objects/Match_Result__c/fields/Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles__c</fullName>
    <label>Distance_Miles</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>