force-app/main/default/objects/Match_Result__c/fields/Hard_Constraints_Met__c.field-meta.xml
<CustomField>
    <fullName>Hard_Constraints_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard_Constraints_Met</label>
    <type>Checkbox</type>
</CustomField>