force-app/main/default/objects/Match_Result__c/fields/Low_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Low_Priority_Score__c</fullName>
    <label>Low_Priority_Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>