force-app/main/default/objects/Match_Result__c/fields/Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Match_Date__c</fullName>
    <label>Match_Date</label>
    <type>DateTime</type>
</CustomField>