force-app/main/default/objects/Match_Result__c/fields/Match_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Match_Reasons__c</fullName>
    <label>Match_Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>