force-app/main/default/objects/Match_Result__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match_Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>