force-app/main/default/objects/Match_Result__c/fields/Not_Suitable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Suitable_Reason__c</fullName>
    <label>Not_Suitable_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>