force-app/main/default/objects/Match_Result__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>Preference__c</referenceTo>
    <relationshipLabel>Match Results</relationshipLabel>
    <relationshipName>Match_Results</relationshipName>
    <type>Lookup</type>
</CustomField>