force-app/main/default/objects/Match_Result__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Match_Results</relationshipName>
    <type>Lookup</type>
</CustomField>