force-app/main/default/objects/Match_Result__c/fields/Recommended_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Date__c</fullName>
    <label>Recommended_Date</label>
    <type>DateTime</type>
</CustomField>